EXTRA_DIST = mainpage.h chainbuilding.svg chainbuilding.png \
	     sound3d.svg sound3d.png emiplib.css \
             bufferchain.svg bufferchain.png \
	     nobufferchain.svg nobufferchain.png \
	     subchains1.svg subchains1.png \
	     subchains2.svg subchains2.png \
	     subchains3.svg subchains3.png \
	     subchains4.svg subchains4.png

